tests/operator_007.test
Testing NOT bitwise operation in Double
==CODE==
Double x = 1;
~x;
==RESULT==
Compile error: The type Double doesn't support such operation! on \S+ line \d+
